--- a/styles.scss
+++ b/styles.scss
@@ -8,9 +8,30 @@
 .ships {
     height: 70vh;
     margin: 50px;
+    display: grid;
     text-align: center;
+    grid: auto / repeat(40, 1fr);
+    gap: 2px;
+
+    > div:first-child {
+        grid-column: span 40;
+    }
+
+    > div:nth-child(n+2):nth-child(-n+6) {
+        grid-column: span 8;
+    }
+
+    > div:nth-child(n+7):nth-child(-n+14) {
+        grid-column: span 5;
+    }
 }
 
 .button {
     text-align: center;
+
+    .fire-button {
+        height: 50px;
+        width: 200px;
+        background-color: palevioletred;
+    }
 }
