--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
 .button {
   text-align: center;
 }
-.button .fire-button {
+.button__fire-button {
   height: 50px;
   width: 200px;
   background-color: palevioletred;
