--- a/styles.scss
+++ b/styles.scss
@@ -29,7 +29,7 @@
 .button {
     text-align: center;
 
-    .fire-button {
+    &__fire-button {
         height: 50px;
         width: 200px;
         background-color: palevioletred;
