--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,12 @@
   margin: 0;
   border-style: border-box;
   font-size: 28px;
+  color: white;
+  background-color: black;
 }
 
 .ships {
-  height: 70vh;
+  height: 50vh;
   margin: 50px;
   display: grid;
   text-align: center;
@@ -22,12 +24,26 @@
 .ships > div:nth-child(n+7):nth-child(-n+14) {
   grid-column: span 5;
 }
+.ships__mother {
+  width: 200px;
+}
+.ships__defence {
+  width: 100px;
+}
+.ships__attack {
+  width: 70px;
+}
 
 .button {
-  text-align: center;
+  height: 30vh;
+  position: relative;
 }
 .button__fire-button {
+  position: absolute;
+  bottom: 0;
+  left: 43%;
   height: 50px;
   width: 200px;
-  background-color: palevioletred;
+  background-color: red;
+  border-radius: 10px;
 }
