--- a/styles.scss
+++ b/styles.scss
@@ -3,10 +3,12 @@
     margin: 0;
     border-style: border-box;
     font-size: 28px;
+    color: white;
+    background-color: black;
 }
 
 .ships {
-    height: 70vh;
+    height: 50vh;
     margin: 50px;
     display: grid;
     text-align: center;
@@ -24,14 +26,32 @@
     > div:nth-child(n+7):nth-child(-n+14) {
         grid-column: span 5;
     }
+
+    &__mother {
+        width: 200px;
+    }
+
+    &__defence {
+        width: 100px;
+    }
+
+    &__attack {
+        width: 70px;
+    }
+
 }
 
 .button {
-    text-align: center;
+    height: 30vh;
+    position: relative;
 
     &__fire-button {
+        position: absolute;
+        bottom: 0;
+        left: 43%;
         height: 50px;
         width: 200px;
-        background-color: palevioletred;
+        background-color: red;
+        border-radius: 10px;
     }
 }
