--- a/styles.scss
+++ b/styles.scss
@@ -31,6 +31,10 @@
         width: 200px;
     }
 
+    &__explosion {
+        width: 150px;
+    }
+
     &__defence {
         width: 100px;
     }
