Fixed issue with gameOver function

--- a/styles.scss
+++ b/styles.scss
@@ -52,10 +52,11 @@
     &__fire-button {
         position: absolute;
         bottom: 0;
-        left: 43%;
+        left: 45%;
         height: 50px;
         width: 200px;
         background-color: red;
         border-radius: 10px;
+        font-weight: bold;
     }
 }
