--- a/styles.css
+++ b/styles.css
@@ -43,8 +43,9 @@
 }
 .button__fire-button {
   position: absolute;
-  bottom: 0;
-  left: 45%;
+  margin-left: -100px;
+  left: 50%;
+  bottom: 0px;
   height: 50px;
   width: 200px;
   background-color: red;
