--- a/styles.scss
+++ b/styles.scss
@@ -51,8 +51,9 @@
 
     &__fire-button {
         position: absolute;
-        bottom: 0;
-        left: 45%;
+        margin-left:-100px;
+        left:50%;
+        bottom: 0px;
         height: 50px;
         width: 200px;
         background-color: red;
